PC-139 Upgrade Morphia to v2.4.7; Build with Java 21 and target Java 11 (#122)
* PC-139 Build with Java 21

* PC-139 Optimized imports

* PC-139 Upgraded Morphia to v2.4.7

* PC-139 Cleaned up dependencies

* PC-139 Target Java 11 and use its features; replace Guava where possible

* PC-139 Fix wrong exception expected

* PC-139 Bumped minor version

* PC-139 Bump mongo-java-driver to 4.11.1

* PC-139 Make filter case-insensitive

* PC-139 Set version of compiler plugin; remove skipSortingImports